# contrib-vchanger

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  ReleaseNotes  aclocal.m4  config.h.in  config.status  configure  configure.ac  configure.in  win32build
doc/: 99-by-label-fix.rules  Makefile  Makefile.am  Makefile.in  README.by-label  by_label_fix.sh  example-vchanger-udev.rules  example.conf  vchanger-example.conf  vchanger.8  vchanger.8.asciidoc  vchanger.conf.5  vchanger.conf.5.asciidoc  vchangerHowto.html
rpm/: vchanger.el6.spec  vchanger.el7.spec
scripts/: Makefile  Makefile.am  Makefile.in  vchanger-genudevrules  vchanger-launch-mount.sh  vchanger-launch-umount.sh  vchanger-mount-uuid.sh  vchanger-umount-uuid.sh  vchanger.default
src/: Makefile.am  Makefile.in  bconsole.cpp  bconsole.h  changerstate.cpp  changerstate.h  compat_defs.h  compat_util.c  compat_util.h  diskchanger.cpp  diskchanger.h  errhandler.cpp  errhandler.h  inifile.cpp  inifile.h  junctions.c  junctions.h  loghandler.cpp  loghandler.h  mypopen.cpp  mypopen.h  targetver.h  tstring.cpp  tstring.h  util.cpp  util.h  uuidlookup.c  uuidlookup.h  vchanger.cpp  vchanger.h  vchanger_common.cpp  vchanger_common.h  vconf.cpp  vconf.h  w32compat_util.c  w32compat_util.h  win32_util.c  win32_util.h  winconfig.h
src/compat/: getline.c  getline.h  gettimeofday.c  gettimeofday.h  getuid.c  getuid.h  localtime_r.c  localtime_r.h  readlink.c  readlink.h  sleep.c  sleep.h  symlink.c  symlink.h  syslog.c  syslog.h
win32/: .cproject  .project  ReleaseNotes.txt  example.conf  installer.nsi  license.txt  vchangerHowto.html
win32/.svn/: all-wcprops  entries
win32/Release/.svn/: all-wcprops  entries
win32/Release/.svn/text-base/: makefile.svn-base  objects.mk.svn-base
win32/Release/src/.svn/: all-wcprops  entries
win32/Release/src/.svn/text-base/: subdir.mk.svn-base
win32/installer/.svn/: all-wcprops  entries
win32/installer/.svn/text-base/: example.conf.svn-base  installer.nsi.svn-base  vchangerHowto.html.svn-base
