#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(vchanger, 0.8.2, jfisher@jaybus.com)
AC_DEFINE(COPYRIGHT_NOTICE, "Copyright (C) 2008-2009 Josh Fisher", "Copyright Notice")
AC_CONFIG_SRCDIR([src])
AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE
AM_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_INSTALL

# Checks for libraries.

# Use multithreading
#CFLAGS="-pthread $CFLAGS"
#CXXFLAGS="-pthread $CXXFLAGS"

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([fcntl.h limits.h locale.h stdlib.h string.h syslog.h utime.h sys/stat.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_TOOL([STRIP],[strip])
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_STAT
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([gettimeofday memmove memset strcasecmp setlocale strtol strtoul])

AC_CONFIG_FILES([Makefile
				src/Makefile])

AC_OUTPUT
